fix: ui spacing

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -6,7 +6,7 @@ page-about {
     .app-icon {
         max-width: 60vw;
         max-height: 20vh;
-        margin: 35px auto 20px auto;
+        margin: 25px auto 20px auto;
         display: block;
     }
 
