--- a/src/pages/scan-session/scan-session.scss
+++ b/src/pages/scan-session/scan-session.scss
@@ -1,12 +1,4 @@
 page-scan-session {
-  ion-list:first-child {
-    margin-top: 10px;
-  }
-
-  ion-fab {
-    margin-bottom: 10px;
-  }
-
   .btn-send-manual-input {
     height: 56px;
     width: 64px;
