--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -203,3 +203,14 @@ $colors: (
   border: 1px solid #d6d6d6;
   padding: 12px !important;
 }
+
+
+.scroll-content {
+  padding-top: 10px;
+}
+
+.md {
+  ion-fab {
+    margin-bottom: 10px;
+  }
+}
